--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   
-  <script src="dist/script.js"></script>
+  <script src="dist/script.js">
+    
+  </script>
 </body>
 </html> 
