--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  
-  <script src="dist/script.js">
-    
+  tututuu
+  <script src="dist/script.js"></script>
+  <script>
+   // win=confirm('ert')
   </script>
 </body>
 </html> 
