--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   tututuu
   <script src="dist/script.js"></script>
   <script>
-   
+   win=prompt('ert')
+   if (win!=null){
+     win=win**2
+     alert(win)
+
+}
   </script>
 </body>
 </html> 
