--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   tututuu
   <script src="dist/script.js"></script>
   <script>
-   win=prompt('ert')
-   if (win!=null){
+   win=prompt('я могу посчитать степень 2х')
+  if (win!=null && win!=''){
      win=win**2
-     alert(win)
-
-}
+     alert('ответ', win)
+    }
+    else
+    alert('ну ок')
   </script>
 </body>
 </html> 
