--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   tututuu
   <script src="dist/script.js"></script>
   <script>
+    /*
    win=prompt('я могу посчитать степень 2х')
   if (win!=null && win!=''){
      win=win**2
-     alert('ответ', win)
+     alert(win)
     }
     else
     alert('ну ок')
+    */
+
+    win
   </script>
 </body>
 </html> 
