--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     alert('ну ок')
     */
 
-    win
+    win=prompt('число 1')
+    sum=win
+    win=prompt('число 2')
+    sum=(sum+win)/2
+    alert(sum)
   </script>
 </body>
 </html> 
