--- a/index.html
+++ b/index.html
@@ -10,21 +10,13 @@
   tututuu
   <script src="dist/script.js"></script>
   <script>
-    /*
-   win=prompt('я могу посчитать степень 2х')
-  if (win!=null && win!=''){
-     win=win**2
-     alert(win)
-    }
-    else
-    alert('ну ок')
-    */
-
-    win=prompt('число 1')
-    sum=win
-    win=prompt('число 2')
-    sum=(sum+win)/2
-    alert(sum)
+  //  win=prompt('я могу посчитать степень 2х')
+  // if (win!=null && win!=''){
+  //    win=win**2
+  //    alert('ответ '+win)
+  //   }
+  //   else
+  //   alert('ну ок')
   </script>
 </body>
 </html> 
