--- a/index.html
+++ b/index.html
@@ -9,11 +9,42 @@
 </head>
 
 <body>
-  tututuu
   <p id="Log"></p>
+  <div id="task_1">
+    <h1>Задача 1</h1>
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <button>Вычислить</button>
+    <div></div>
+  </div>
+
+
+
   <script src="dist/script.js"></script>
   <script>
+
+const input1 = document.querySelectorAll('#task_1 input')
+    const button1 = document.querySelector('#task_1 button')
+    const output1 = document.querySelector('#task_1 div')
     
+    function concatenate() {
+      let result = ''
+      for (let el of input1) {
+        result += el.value.toString()
+      }
+      output1.innerHTML = `<h3>${result}</h3>`
+    }
+    
+    button1.addEventListener('click', function(e) {
+      console.log(e)
+      logging(concatenate)
+    })
+
   </script>
 </body>
 
