--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script src="dist/script.js"></script>
   <script>
 
-const input1 = document.querySelectorAll('#task_1 input')
+    const input1 = document.querySelectorAll('#task_1 input')
     const button1 = document.querySelector('#task_1 button')
     const output1 = document.querySelector('#task_1 div')
     
@@ -41,8 +41,7 @@ const input1 = document.querySelectorAll('#task_1 input')
     }
     
     button1.addEventListener('click', function(e) {
-      console.log(e)
-      logging(concatenate)
+      concatenate()
     })
 
   </script>
