--- a/index.html
+++ b/index.html
@@ -9,40 +9,12 @@
 </head>
 
 <body>
-  <p id="Log"></p>
-  <div id="task_1">
-    <h1>Задача 1</h1>
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <input type="text">
-    <button>Вычислить</button>
-    <div></div>
-  </div>
+  <div closs="tut">yyy</div>
 
 
 
   <script src="dist/script.js"></script>
   <script>
-
-    const input1 = document.querySelectorAll('#task_1 input')
-    const button1 = document.querySelector('#task_1 button')
-    const output1 = document.querySelector('#task_1 div')
-    
-    function concatenate() {
-      let result = ''
-      for (let el of input1) {
-        result += el.value.toString()
-      }
-      output1.innerHTML = `<h3>${result}</h3>`
-    }
-    
-    button1.addEventListener('click', function(e) {
-      concatenate()
-    })
 
   </script>
 </body>
