--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
       номер 1
     </span>
     <div>
-      <button>
-        проверить
+      <button id="b1">
+        начать
       </button>
+      <span>
+        ответ_<span></span></span>
     </div>
   </div>
 
 
   <script src="dist/script.js"></script>
   <script>
-
+    const button1 = document.querySelector('b1')
+    button1.addEventListener('click',n1())
   </script>
 </body>
 
