--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
   <script src="dist/script.js"></script>
   <script>
-    const button1 = document.querySelector('b1')
-    button1.addEventListener('click',n1())
+    const button1 = document.querySelector('#b1')
+    button1.addEventListener('click',n1)
   </script>
 </body>
 
