--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 <body>
+  <a href="https://andreyka101.github.io/-/index.html">
+    назад
+  </a>
   <div>
     <p>
       dz    
@@ -42,6 +45,118 @@
     </div>
 
   </div>
+  <!-- ---------------------------------- -->
+  <div>
+    <p>
+      urok str 139
+    </p>
+
+    <div>
+    <span>
+      номер 1
+    </span>
+      <button id="b4">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 3
+    </span>
+      <button id="b5">
+        начать
+      </button>
+    </div>
+
+  </div>
+  <!-- ------------------------------ -->
+  <div>
+    <p>
+      urok str 159
+    </p>
+
+    <div>
+    <span>
+      номер 2
+    </span>
+      <button id="b6">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 5
+    </span>
+      <button id="b7">
+        начать
+      </button>
+    </div>
+
+  </div>
+  <!-- -------------------------------------- -->
+  <div>
+    <p>
+      urok str 159
+    </p>
+
+    <div>
+    <span>
+      номер 1
+    </span>
+      <button id="b8">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 2
+    </span>
+      <button id="b9">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 3
+    </span>
+      <button id="b10">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 4
+    </span>
+      <button id="b11">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 5
+    </span>
+      <button id="b12">
+        начать
+      </button>
+    </div>
+
+    <div>
+    <span>
+      номер 6
+    </span>
+      <button id="b13">
+        начать
+      </button>
+    </div>
+
+  </div>
+
 
 
   <script src="dist/script.js"></script>
@@ -52,6 +167,29 @@
     button2.addEventListener('click',n2)
     const button3 = document.querySelector('div div #b3')
     button3.addEventListener('click',n3)
+
+    const button4 = document.querySelector('div div #b4')
+    button4.addEventListener('click',n4)
+    const button5 = document.querySelector('div div #b5')
+    button5.addEventListener('click',n5)
+    
+    const button6 = document.querySelector('div div #b6')
+    button6.addEventListener('click',n6)
+    const button7 = document.querySelector('div div #b7')
+    button7.addEventListener('click',n7)
+    
+    const button8 = document.querySelector('div div #b8')
+    button8.addEventListener('click',n8)
+    const button9 = document.querySelector('div div #b9')
+    button9.addEventListener('click',n9)
+    const button10 = document.querySelector('div div #b10')
+    button10.addEventListener('click',n10)
+    const button11 = document.querySelector('div div #b11')
+    button11.addEventListener('click',n11)
+    const button12 = document.querySelector('div div #b12')
+    button12.addEventListener('click',n12)
+    const button13 = document.querySelector('div div #b13')
+    button13.addEventListener('click',n13)
   </script>
 </body>
 
