--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 <body>
-  <a href="https://andreyka101.github.io/-/index.html">
+  <a href="https://andreyka101.github.io/collection-of-all-lessons/">
     назад
   </a>
   <div>
