--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
       dz    
     </p>
 
-    <div>
+    <div id="b1">
     <span>
       номер 1
     </span>
-      <button id="b1">
+      <button>
         начать
       </button>
+
     </div>
 
     <div>
@@ -161,7 +162,7 @@
 
   <script src="dist/script.js"></script>
   <script>
-    const button1 = document.querySelector('div div #b1')
+    const button1 = document.querySelector('#b1 button')
     button1.addEventListener('click',n1)
     const button2 = document.querySelector('div div #b2')
     button2.addEventListener('click',n2)
