--- a/index.html
+++ b/index.html
@@ -157,10 +157,22 @@
     </div>
 
   </div>
+  <!-- -------------------------------------- -->
+  <div>
+    <p>
+      pz 1
+    </p>
 
-  <span class="flicker-in-2">
-    rruti rgrg
-  </span>
+    <div>
+    <span>
+      номер 5
+    </span>
+      <button id="b15">
+        начать
+      </button>
+    </div>
+
+  </div>
 
 
   <script src="dist/script.js"></script>
@@ -194,6 +206,9 @@
     button12.addEventListener('click',n12)
     const button13 = document.querySelector('div div #b13')
     button13.addEventListener('click',n13)
+    
+    const button15 = document.querySelector('div div #b15')
+    button15.addEventListener('click',n15)
   </script>
 </body>
 
