--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 <body>
+  <div class="body">
   <a href="https://andreyka101.github.io/collection-of-all-lessons/">
     назад
   </a>
-  <div>
+
+
+  <div class="cards">
     <p>
       dz    
     </p>
@@ -47,7 +50,7 @@
 
   </div>
   <!-- ---------------------------------- -->
-  <div>
+  <div class="cards">
     <p>
       urok str 139
     </p>
@@ -72,7 +75,7 @@
 
   </div>
   <!-- ------------------------------ -->
-  <div>
+  <div class="cards">
     <p>
       urok str 159
     </p>
@@ -97,7 +100,7 @@
 
   </div>
   <!-- -------------------------------------- -->
-  <div>
+  <div class="cards">
     <p>
       urok str 159
     </p>
@@ -158,11 +161,20 @@
 
   </div>
   <!-- -------------------------------------- -->
-  <div>
+  <div class="cards">
     <p>
       pz 1
     </p>
 
+    <div>
+    <span>
+      номер 4
+    </span>
+      <button id="b14">
+        начать
+      </button>
+    </div>
+    
     <div>
     <span>
       номер 5
@@ -172,6 +184,7 @@
       </button>
     </div>
 
+  </div>
   </div>
 
 
@@ -207,6 +220,8 @@
     const button13 = document.querySelector('div div #b13')
     button13.addEventListener('click',n13)
     
+    const button14 = document.querySelector('div div #b14')
+    button14.addEventListener('click',n14)
     const button15 = document.querySelector('div div #b15')
     button15.addEventListener('click',n15)
   </script>
