--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/svg+xml" href="js_vyspx73mx2pz.svg" />
     </head>
 <body>
   <a href="https://andreyka101.github.io/collection-of-all-lessons/">
