--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>lesson-1j</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/svg+xml" href="js_vyspx73mx2pz.svg" />
     </head>
